crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__comparison.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/comparison.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (< 1.0 2.0))
   (print (< 2.0 2.0))
   (print (< 2.0 1.0))
   (print (<= 1.0 2.0))
   (print (<= 2.0 2.0))
   (print (<= 2.0 1.0))
   (print (> 1.0 2.0))
   (print (> 2.0 2.0))
   (print (> 2.0 1.0))
   (print (>= 1.0 2.0))
   (print (>= 2.0 2.0))
   (print (>= 2.0 1.0))
   (print (< 0.0 (- 0.0)))
   (print (< (- 0.0) 0.0))
   (print (> 0.0 (- 0.0)))
   (print (> (- 0.0) 0.0))
   (print (<= 0.0 (- 0.0)))
   (print (<= (- 0.0) 0.0))
   (print (>= 0.0 (- 0.0)))
   (print (>= (- 0.0) 0.0)))

----- stderr -----
