crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__equals_class.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals_class.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅)
   (class Bar (global @4) ∅)
   (print (== (global Foo @3) (global Foo @3)))
   (print (== (global Foo @3) (global Bar @4)))
   (print (== (global Bar @4) (global Foo @3)))
   (print (== (global Bar @4) (global Bar @4)))
   (print (== (global Foo @3) "Foo"))
   (print (== (global Foo @3) nil))
   (print (== (global Foo @3) 123.0))
   (print (== (global Foo @3) true)))

----- stderr -----
