crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__equals_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/equals_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method method [(local this @0)] []
         (block)))
   (var foo (global @4) (call +4 (global Foo @3)))
   (var fooMethod (global @5) (attr (global foo @4) method))
   (print (== (global fooMethod @5) (global fooMethod @5)))
   (print (== (attr (global foo @4) method) (attr (global foo @4) method))))

----- stderr -----
