crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__not.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/not.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (! true))
   (print (! false))
   (print (! (! true)))
   (print (! 123.0))
   (print (! 0.0))
   (print (! nil))
   (print (! ""))
   (fun foo (global @3) [] []
      (block))
   (print (! (global foo @3))))

----- stderr -----
